# property-testing-with-hypothesis

./: .gitignore  Makefile  README.md  date_utils.py  pyproject.toml  requirements.txt  test_date_utils.py
date_utils/: day_of_week.py  time_since.py
date_utils/tests/: test_day_of_week.py  test_time_since.py
